<resources>
    <string name="app_name">MyCalculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_division">/</string>
    <string name="_multiplication">*</string>
    <string name="_subtraction">-</string>
    <string name="_addition">+</string>
    <string name="_equals">=</string>
    <string name="_.">.</string>
    <string name="_c">C</string>
    <string name="_backspace">⌫</string>
    <string name="summaries">Summaries</string>
    <string name="_00">00</string>
    <string name="percent">%</string>
    <string name="pink_theme">Pink</string>
    <string name="cyan_theme">Cyan</string>
    <string name="default_theme">Default</string>
    <string name="choose_theme">Choose your app theme</string>
    <string name="settings">Settings</string>
    <string name="theme_changed_successfully">Тема удачно изменена</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="title_activity_calculator_activator">CalculatorActivator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_2_2">2+2 = ?</string>
    <string name="launch_calculator">Launch calculator</string>
</resources>