<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        style="@style/NiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_pink_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_cyan_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyan_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_default_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_theme" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_and_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>